--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+aiohttp==3.7.4.post0
+async-timeout==3.0.1
+attrs==21.2.0
+chardet==4.0.0
 discord==1.0.1
 discord.py==1.7.2
-gitdb==4.0.7
-GitPython==3.1.17
-pypiwin32==223
-python-dotenv==0.17.1
-requests==2.25.1
+idna==3.2
+multidict==5.1.0
 typing-extensions==3.10.0.0
+yarl==1.6.3
