--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 aiohttp==3.7.4.post0
 async-timeout==3.0.1
 attrs==21.2.0
-certifi==2020.12.5
+certifi==2021.5.30
 cffi==1.14.5
 chardet==4.0.0
 Deprecated==1.2.12
@@ -9,6 +9,7 @@ discord==1.0.1
 discord.py==1.7.2
 idna==3.2
 multidict==5.1.0
+psycopg2-binary==2.8.6
 pycparser==2.20
 PyGithub==1.55
 PyJWT==2.1.0
