--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,8 @@ Deprecated==1.2.12
 discord==1.0.1
 discord.py==1.7.2
 idna==3.2
+mysql-connector-python~=8.0.32
 multidict==5.1.0
-psycopg2-binary==2.8.6
 pycparser==2.20
 PyGithub==1.55
 PyJWT==2.1.0
