--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-aiohttp==3.7.4.post0
-async-timeout==3.0.1
+aiohttp==3.8.4
+aiosignal==1.3.1
+async-timeout==4.0.2
 attrs==22.2.0
 certifi==2022.12.7
-chardet==4.0.0
-charset-normalizer==3.0.1
-discord.py<=1.7.2
+charset-normalizer==3.1.0
+discord.py==2.2.2
+frozenlist==1.3.3
 idna==3.4
 multidict==6.0.4
+mysql==0.0.3
 mysql-connector-python==8.0.32
+mysqlclient==2.1.1
 protobuf==3.20.3
 requests==2.28.2
-typing_extensions==4.4.0
-urllib3==1.26.14
+urllib3==1.26.15
 yarl==1.8.2
