--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ idna==3.4
 multidict==6.0.4
 mysql-connector-python==8.0.32
 protobuf==3.20.3
+python-dotenv==1.0.0
 requests==2.28.2
 typing_extensions==4.4.0
 urllib3==1.26.14
